<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="pref.link_mode"
        android:title="@string/pref_title_link_mode"
        android:defaultValue="battery"
        android:entries="@array/pref_link_modes"
        android:entryValues="@array/pref_link_modes_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <ListPreference
        android:key="pref.blink"
        android:title="@string/pref_blink_title"
        android:defaultValue="slow"
        android:entries="@array/pref_blink"
        android:entryValues="@array/pref_blink_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <CheckBoxPreference
        android:key="pref.smoke"
        android:defaultValue="true"
        android:summaryOff="@string/smoke_disabled"
        android:summaryOn="@string/smoke_enabled"
        android:title="@string/pref_show_smoke_title"/>

</PreferenceScreen>
